--- a/shopping_site/templates/showUpdatedWarehouse.html
+++ b/shopping_site/templates/showUpdatedWarehouse.html
@@ -15,12 +15,12 @@
     <table align="center" border="3" width="800">
         <caption style="font-weight: bold; font-size: 30px; color: #642100;">Update Result</caption>
         <tr style="background-color: #642100;">
-            <th style="height:50px;width:200px;color: #FFE6D9; font-size: 25px; padding-left: 50px; padding-top:10px;" > Supplier ID </th>
-            <th style="height:50px;width:200px;color: #FFE6D9; font-size: 25px; padding-left: 50px; padding-top:10px;" > Supplier Name </th>
+            <th style="height:50px;width:200px;color: #FFE6D9; font-size: 25px; padding-left: 50px; padding-top:10px;" > Warehouse ID </th>
+            <th style="height:50px;width:200px;color: #FFE6D9; font-size: 25px; padding-left: 50px; padding-top:10px;" > Location </th>
         </tr>
         <tr style="background-color: #FFD2D2;">
-            <td style="height:70px;width:200px;color: #D94600; font-size: 30px; padding-left: 50px; padding-top:10px;" > {{ supplier.SID }} </td> 	
-            <td style="height:70px;width:200px;color: #D94600; font-size: 30px; padding-left: 50px; padding-top:10px;" > {{ supplier.SName }} </td>
+            <td style="height:70px;width:200px;color: #D94600; font-size: 30px; padding-left: 50px; padding-top:10px;" > {{ warehouse.WID }} </td> 	
+            <td style="height:70px;width:200px;color: #D94600; font-size: 30px; padding-left: 50px; padding-top:10px;" > {{ warehouse.location }} </td>
         </tr>
     </table>
      
