--- a/shopping_site/templates/createWarehouse.html
+++ b/shopping_site/templates/createWarehouse.html
@@ -14,13 +14,17 @@
     {% csrf_token %}  
         <div class="container">  
             <div class="form-group">
-                <label for="SName" class="control-label col-sm-2 style="color:#FFECEC">SName</label>
+                <label for="WID" class="control-label col-sm-2" style="color:#FFECEC">Warehouse ID</label>
                 <div class="col-sm-10">
-                    <input type="text" name="SName" value=""/>
+                    <input type="text" name="WID" value=""/>
+                </div>
+                <label for="location" class="control-label col-sm-2" style="color:#FFECEC">Location</label>
+                <div class="col-sm-10">
+                    <input type="text" name="location" value=""/>
                 </div>
             </div> 
             <div class="form-group">
-                <button type="submit" class="btn btn-default style="color:#AE0000; font-weight: bold;">Submit</button> 
+                <button type="submit" class="btn btn-default" style="color:#AE0000; font-weight: bold;">Submit</button> 
             </div>
         </div> 
     </form>  
