--- a/shopping_site/templates/deleteSuccessfully.html
+++ b/shopping_site/templates/deleteSuccessfully.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>  
+{% load static %}
 <html lang="en">  
 <head>  
     <meta charset="UTF-8">  
@@ -6,26 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
 </head>  
-<body>  
-    {{ data.title }} <br/> 
-    {{ data.description }} 
+<body>   
+    {% csrf_token %}  
+    Delete successfully !
+</body>  
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
