--- a/shopping_site/templates/searchWarehouse.html
+++ b/shopping_site/templates/searchWarehouse.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
-    <link rel="stylesheet" href="{% static 'css/search.css' %}"> 
+    <link rel="stylesheet" href="{% static 'css/search.css' %}">
 </head>  
 <body>  
     {% load widget_tweaks %}
     {% block content %}
     <form method="get">
         <div class="well" style="background-color:#BB3D00;">
-            <h4 style="margin-top: 0; margin-bottom: 20px; color:#FFF3EE; font-size:40px;">Search For Supplier</h4>
+            <h4 style="margin-top: 0; margin-bottom: 20px; color:#FFF3EE; font-size:40px;">Search For Warehouse</h4>
             <div class="row">
                 <div class="form-group col-sm-4 col-md-3" style="color:#FFF3EE; font-size:25px;">
                     <div style="margin-bottom: 10px;"> 
-                        {{ filter.form.SName.label_tag}}
+                        {{ filter.form.WID.label_tag}}
                     </div>
-                    {% render_field filter.form.SName class="form-control" %}
+                    {% render_field filter.form.WID class="form-control" %}
                 </div>
             </div>
             <button type="submit" class="btn btn-primary" style="background-color:#FFF3EE;color:#BB3D00;font-weight:bold;">
@@ -31,15 +31,15 @@
     <table class="table table-bordered" style="background-color:#FFF4C1;opacity = 0.8;font-size:20px;">
         <thead>
         <tr style="color:#BB3D00;font-weight:bold;">
-            <th>Supplier ID</th>
-            <th>Supplier Name</th>
+            <th>Warehouse ID</th>
+            <th>Location</th>
         </tr>
         </thead>
         <tbody>
-        {% for supplier in filter.qs %}
+        {% for warehouse in filter.qs %}
             <tr style="color:#D94600;">
-                <td>{{ supplier.SID }}</td>
-                <td>{{ supplier.SName }}</td>
+                <td>{{ warehouse.WID }}</td>
+                <td>{{ warehouse.location }}</td>
             </tr>
         {% endfor %}
         </tbody>
@@ -47,21 +47,3 @@
     {% endblock %}
 </body>  
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
