--- a/shopping_site/templates/createSupplier.html
+++ b/shopping_site/templates/createSupplier.html
@@ -3,7 +3,7 @@
 <html lang="en">  
 <head>  
     <meta charset="UTF-8">  
-    <title>Django Contact Form</title>  
+    <title>Add Supplier</title>  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
@@ -14,14 +14,19 @@
     {% csrf_token %}  
         <div class="container">  
             <div class="form-group">
-                <label for="SName" class="control-label col-sm-2 style="color:#FFECEC">SName</label>
+                <label for="SID" class="control-label col-sm-2" style="color:#FFECEC">Supplier ID</label>
+                <div class="col-sm-10">
+                    <input type="text" name="SID" value=""/>
+                </div>
+                <label for="SName" class="control-label col-sm-2" style="color:#FFECEC">SName</label>
                 <div class="col-sm-10">
                     <input type="text" name="SName" value=""/>
                 </div>
             </div> 
             <div class="form-group">
-                <button type="submit" class="btn btn-default style="color:#AE0000; font-weight: bold;">Submit</button> 
+                <button type="submit" class="btn btn-default" style="color:#AE0000;font-weight:bold;">Submit</button> 
             </div>
+            <input type="button" class="btn btn-default" value="Return" style="color:#AE0000; font-weight: bold;" onclick="javascript:location.href='http://127.0.0.1:8000/employee'">
         </div> 
     </form>  
 </body>  
