--- a/shopping_site/templates/showUpdatedWarehouse.html
+++ b/shopping_site/templates/showUpdatedWarehouse.html
@@ -12,8 +12,8 @@
 </head>  
 
 <body> 
-    <table align="center" border="3" width="800">
-        <caption style="font-weight: bold; font-size: 30px; color: #642100;">Update Result</caption>
+    <table align="center" border="3" width="800" style="margin-bottom: 20px;">
+        <caption style="font-weight: bold; font-size: 30px; color: #642100;  margin-bottom: 20px;">Update Result</caption>
         <tr style="background-color: #642100;">
             <th style="height:50px;width:200px;color: #FFE6D9; font-size: 25px; padding-left: 50px; padding-top:10px;" > Warehouse ID </th>
             <th style="height:50px;width:200px;color: #FFE6D9; font-size: 25px; padding-left: 50px; padding-top:10px;" > Location </th>
@@ -23,6 +23,6 @@
             <td style="height:70px;width:200px;color: #D94600; font-size: 30px; padding-left: 50px; padding-top:10px;" > {{ warehouse.location }} </td>
         </tr>
     </table>
-     
+    <input type="button" class="btn btn-default" value="Return" style="margin-left:240px;color:#AE0000; font-weight: bold;" onclick="javascript:location.href='http://127.0.0.1:8000/employee'">
 </body>  
 </html>
