--- a/shopping_site/templates/addSuccessfully.html
+++ b/shopping_site/templates/addSuccessfully.html
@@ -3,7 +3,7 @@
 <html lang="en">  
 <head>  
     <meta charset="UTF-8">  
-    <title>Django Contact Form</title>  
+    <title>Add Successfully</title>  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
@@ -12,7 +12,7 @@
 <body>   
     {% csrf_token %}  
     <div style="margin-left: 10px; margin-bottom: 30px;font-size: 50px; font-weight: bold; color:#642100;">
-        Delete successfully !
+        Add successfully !
     </div>
     <input type="button" class="btn btn-default" value="Return" style="color:#AE0000; font-weight: bold;" onclick="javascript:location.href='http://127.0.0.1:8000/employee'">
 </body>  
