--- a/shopping_site/templates/delete.html
+++ b/shopping_site/templates/delete.html
@@ -3,7 +3,7 @@
 <html lang="en">  
 <head>  
     <meta charset="UTF-8">  
-    <title>Django Contact Form</title>  
+    <title>Delete</title>  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
@@ -14,14 +14,14 @@
         <form method="POST" class="post-form" action="#">  
         {% csrf_token %} 
             <div class="container">  
-                <div class="form-group" style="color: #FFECEC;">
+                <div class="form-group" style="color: #642100; font-size: 30px; font-weight: bold;">
                     <h2>Do you want to delete this item?</h2>
                 </div> 
                 <div class="form-group">
                     <button type="submit" class="btn btn-default" style="color:#AE0000; font-weight: bold; width: 60px;">Yes</button> 
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default" style="color:#AE0000; font-weight: bold; width: 60px;">No</button> 
+                    <input type="button" value ="No" class="btn btn-default" style="color:#AE0000; font-weight: bold; width: 60px;" onclick="javascript:location.href='http://127.0.0.1:8000/employee'">
                 </div>
             </div> 
         </form> 
